linked each home card to the single-product view

--- a/public/style.css
+++ b/public/style.css
@@ -26,7 +26,7 @@ form div {
   box-shadow: none;
   justify-content: center;
   width: 225px;
-  height: auto;
+  height: 285px;
   background-color: blue;
 }
 
