single product updated with style

--- a/public/style.css
+++ b/public/style.css
@@ -38,3 +38,18 @@ img {
   height: 200px; /* height of container */
   object-fit: cover;
 }
+
+.single-view-image {
+  width: 90vw;
+  height: 45vw;
+  background: linear-gradient(to bottom, transparent, white);
+}
+
+.Overlay {
+  display: block;
+  margin-left: 10vw;
+  margin-right: 10vw;
+  width: 90vw;
+  height: 45vw;
+  background-color: white;
+}
