--- a/public/style.css
+++ b/public/style.css
@@ -58,9 +58,14 @@ img {
 }
 
 .single-view-image {
-  width: 90vw;
-  height: 45vw;
+  width: 50vw;
+  height: 40vw;
   background: linear-gradient(to bottom, transparent, white);
+}
+
+.single-view-button {
+  width: 150px;
+  height: 60px;
 }
 
 .Overlay {
