added component adminpanel

--- a/public/style.css
+++ b/public/style.css
@@ -99,3 +99,18 @@ img {
 .buttonAdminProducts {
   font-size: 10px;
 }
+
+.adminWelcome {
+  font-size: 50px;
+  justify-content: center;
+  margin-left: 100px;
+  display: flex;
+}
+
+.fullstackPic {
+  width: 20%;
+  height: 20%;
+  justify-content: center;
+  margin-left: 43%;
+  display: flex;
+}
